<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints="username"
        android:hint="@string/enter_you_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:autofillHints="phoneNumber"
        android:hint="@string/enter_you_phone"
        android:inputType="phone" />

    <LinearLayout
        android:id="@+id/driver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="5">

        <EditText
            android:id="@+id/car_model"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:layout_marginEnd="8dp"
            android:hint="@string/enter_car_model"
            android:inputType="text" />

        <EditText
            android:id="@+id/driver_licence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:layout_marginStart="8dp"
            android:hint="@string/enter_driver_licence"
            android:inputType="text" />

    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@color/black"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>