<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/driver_role"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            android:background="@color/black"
            android:text="@string/driver"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/rider_role"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            android:background="@color/black"
            android:text="@string/rider"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>