<?xml version="1.0" encoding="utf-8"?>
<com.hypertrack.ridesharing.views.SnackbarContentLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="54dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="54dp"
            android:background="@drawable/bg_snackbar_header"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:drawablePadding="6dp"
                android:elevation="10dp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/bg_snackbar"
            android:elevation="10dp"
            android:padding="@dimen/content_padding"
            tools:targetApi="lollipop">

            <TextView
                android:id="@+id/fare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/fare" />

            <View
                android:id="@+id/middle"
                android:layout_width="4dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:background="@color/grey"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fare" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:padding="8dp"
                android:text="@string/distance"
                android:textAllCaps="true"
                android:textColor="@color/textGrey"
                app:layout_constraintRight_toLeftOf="@id/middle"
                app:layout_constraintTop_toTopOf="@id/middle" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="@id/middle"
                app:layout_constraintRight_toLeftOf="@id/middle"
                tools:text="12km" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:padding="8dp"
                android:text="@string/ride_time"
                android:textAllCaps="true"
                android:textColor="@color/textGrey"
                app:layout_constraintLeft_toRightOf="@id/middle"
                app:layout_constraintTop_toTopOf="@id/middle" />

            <TextView
                android:id="@+id/ride_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="@id/middle"
                app:layout_constraintLeft_toRightOf="@id/middle"
                tools:text="30m" />

            <FrameLayout
                android:id="@+id/user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/middle">

                <include layout="@layout/user_info" />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</com.hypertrack.ridesharing.views.SnackbarContentLayout>